______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.186:

* XINS/Java Server Framework:
  - Removed some unused imports.
  - Removed the references to Log4j as they were replaced with logdoc.
  - Close the stream that read the file xins.properties.

* XINS/Java Common Library:
  - Set the adjustment of the ExpiryFolder size in the doorman lock.
  - Decrease the size of the ExpiryFolder only if a value was removed.
  - Removed unneeded empty constructors.
  - Removed public modifiers for interfaces as it's the default.

* XINS/Java Client Framework:
  - Removed the references to Log4j as they were replaced with logdoc.
  - CallRequestParser closes the StringReader its content is parsed.
  - ResultParser closes the StringReader its content is parsed.

* Generated specification documentation:
  - The name for the enumeration type are also printed in the generated HTML.
  - Fixed a bug that prevented to create the index when at least one API uses
    the new directory structure.
    This bug has been in XINS since version 0.169.

* Generated build file:
  - Fixed incorrect targets classes and wars generated when at least one API
    uses the new directory structure.
    This bug has been in XINS since version 0.169.

* Changed email address of Ernst de Haan to ernst.dehaan@nl.wanadoo.com.

* Removed some TODOs done.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.185:

* XINS/Java Server Framework:
  - Fixed bug that existed since 0.179. All standard result codes were from
    then on supposed to start with an underscore. However, there were still
    references to the 'InternalError' result code. This has now been fixed to
    '_InternalError'.
  - Changed FunctionResult class to improve documentation and style slightly.

* XINS/Java Common Library:
  - Fixed a bug in FastStringBuffer where the method append(char[]) did not