@@ -37,8 +37,9 @@
 		<property file="${xins_home}/.version.properties" />
 		<property name="version" value="${version.major}.${version.minor}${version.suffix}" />
 		<dependset>
-			<srcfileset    file="${xins_home}/.version.properties" />
-			<srcfileset    dir="${project_home}"    includes="**/api.xml"    />
+			<srcfileset    file="${xins_home}/.version.properties"         />
+			<srcfileset    dir="${project_home}"    includes="**/api.xml"  />
+			<srcfileset    dir="${project_home}"    includes="**/impl.xml" />
 			<targetfileset file="${out}" />
 		</dependset>
 		<style in="${in}" out="${out}" style="${style}">
