@@ -85,6 +85,7 @@
 	<translation entry="1513">Call <value-of-param name="function" format="quoted" /> #<value-of-param name="callID" />: Caught exception.</translation>
 	<translation entry="1514">Call <value-of-param name="function" format="quoted" /> #<value-of-param name="callID" />: Succeeded in <value-of-param name="duration" /> ms.</translation>
 	<translation entry="1516">Call <value-of-param name="function" format="quoted" /> #<value-of-param name="callID" />: Failed in <value-of-param name="duration" /> ms. Code is <value-of-param name="code" format="quoted" />.</translation>
+	<translation entry="1517">Call <value-of-param name="function" format="quoted" /> #<value-of-param name="callID" />: Failed with the argument <value-of-param name="parameterName" format="quoted" />:<value-of-param name="parameterValue" format="quoted" />.</translation>
 	<translation entry="1550">Allowing call from <value-of-param name="ip" /> to function <value-of-param name="function" />. Request matches access rule <value-of-param name="index" /> (<value-of-param name="rule" format="quoted" />).</translation>
 	<translation entry="1551">Denying call from <value-of-param name="ip" /> to function <value-of-param name="function" />. Request matches access rule <value-of-param name="index" /> (<value-of-param name="rule" format="quoted" />).</translation>
 	<translation entry="1552">Request from <value-of-param name="ip" /> to function <value-of-param name="function" /> does not match access rule <value-of-param name="index" /> (<value-of-param name="rule" format="quoted" />).</translation>
