@@ -85,6 +85,7 @@
 	<translation entry="1513">Aanroep <value-of-param name="function" format="quoted" /> #<value-of-param name="callID" />: Een exceptie is opgetreden.</translation>
 	<translation entry="1514">Aanroep <value-of-param name="function" format="quoted" /> #<value-of-param name="callID" />: Slaagde in <value-of-param name="duration" /> ms.</translation>
 	<translation entry="1516">Aanroep <value-of-param name="function" format="quoted" /> #<value-of-param name="callID" />: Faalde in <value-of-param name="duration" /> ms. Code is <value-of-param name="code" format="quoted" />.</translation>
+	<translation entry="1517">Aanroep <value-of-param name="function" format="quoted" /> #<value-of-param name="callID" />: Faalde met gegevens <value-of-param name="parameterName" format="quoted" />:<value-of-param name="parameterValue" format="quoted" />.</translation>
 	<translation entry="1550">Aanroep van <value-of-param name="ip" /> naar <value-of-param name="function" /> functie wordt toegestaan. Het verzoek voldoet voor toegangsregel <value-of-param name="index" /> (<value-of-param name="rule" format="quoted" />).</translation>
 	<translation entry="1551">Aanroep van <value-of-param name="ip" /> naar <value-of-param name="function" /> functie wordt niet toegestaan. Het verzoek voldoet voor toegangsregel <value-of-param name="index" /> (<value-of-param name="rule" format="quoted" />).</translation>
 	<translation entry="1552">Aanroep van <value-of-param name="ip" /> naar <value-of-param name="function" /> functie voldoet niet voor de toegangsregel <value-of-param name="index" /> (<value-of-param name="rule" format="quoted" />).</translation>
